[gd_scene load_steps=25 format=2]

[ext_resource path="res://ui/lossGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprits/player/fullPlayer.png" type="Texture" id=2]
[ext_resource path="res://ui/gameOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/musucSettings.tscn" type="PackedScene" id=4]
[ext_resource path="res://audios/bg.wav" type="AudioStream" id=5]
[ext_resource path="res://audios/addLife.wav" type="AudioStream" id=6]
[ext_resource path="res://ui/closeLevel.tscn" type="PackedScene" id=8]
[ext_resource path="res://player.gd" type="Script" id=11]
[ext_resource path="res://Sprits/img_buttons/icons/music.png" type="Texture" id=14]
[ext_resource path="res://Sprits/sounds/jump.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprits/img_buttons/icons/close.png" type="Texture" id=16]
[ext_resource path="res://Sprits/sounds/coin.wav" type="AudioStream" id=17]
[ext_resource path="res://touchControler.tscn" type="PackedScene" id=18]
[ext_resource path="res://Sprits/sounds/game-over.wav" type="AudioStream" id=20]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 13.4144
height = 31.6181

[node name="player" type="KinematicBody2D"]
position = Vector2( 503.453, 291.889 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 11 )

[node name="setting" type="CanvasLayer" parent="."]

[node name="SettingGrid" type="GridContainer" parent="setting"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -119.0
margin_top = 7.0
margin_right = 104.0
margin_bottom = 107.0
rect_scale = Vector2( 0.5, 0.5 )
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingContainer" type="HBoxContainer" parent="setting/SettingGrid"]
margin_right = 204.0
margin_bottom = 100.0

[node name="musicIcon" type="TextureButton" parent="setting/SettingGrid/SettingContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 14 )

[node name="quitIcon" type="TextureButton" parent="setting/SettingGrid/SettingContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 45, 45 )
texture_normal = ExtResource( 16 )

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true
stream_paused = true

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Idle"

[node name="MainCamera" type="Camera2D" parent="."]
current = true
smoothing_speed = 90.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.7081 )
shape = SubResource( 10 )

[node name="jump" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 15 )
volume_db = -12.0
pitch_scale = 1.2

[node name="coinSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 17 )

[node name="touchControler" parent="." instance=ExtResource( 18 )]

[node name="game_over_music" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 20 )

[node name="lossGame" parent="." instance=ExtResource( 1 )]

[node name="gameOver" parent="." instance=ExtResource( 3 )]

[node name="musiSet" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 10

[node name="musucSettings" parent="musiSet" instance=ExtResource( 4 )]

[node name="AddLife" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="closeLevel" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="setting/SettingGrid/SettingContainer/musicIcon" to="." method="_on_musicIcon_pressed"]
[connection signal="pressed" from="setting/SettingGrid/SettingContainer/quitIcon" to="." method="_on_quitIcon_pressed"]
[connection signal="finished" from="MainMusic" to="." method="_on_MainMusic_finished"]
[connection signal="finished" from="jump" to="." method="_on_jump_finished"]
[connection signal="finished" from="coinSound" to="." method="_on_coinSound_finished"]
[connection signal="finished" from="AddLife" to="." method="_on_AddLife_finished"]
